java 8 downgrade and algorithm improvements